[footer][s]: fixed overlapping footer bug - refs #81

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,4 +1,12 @@
-footer{ background:#666666; padding: 25px 0; margin-top: 50px; }
+footer{
+  background:#666666;
+  padding: 25px 0;
+  margin-top: calc(100vh - 170px);
+  position: relative;
+  height: 120px;
+  clear:both;
+  padding-top:20px;
+ }
 footer p, footer a { color:#b5b5b5; font-size:14px; }
 footer a:hover { color:#fff; text-decoration: none;}
 footer .connect li a {
